# reason-react

./: .gitattributes  .gitignore  .npmignore  .ocamlformat  406.json  CHANGES.md  CLAUDE.md  CONTRIBUTING.md  FUTURE-NATIVE.md  FUTURE.md  HISTORY.md  LICENSE  Makefile  PPX_FIX_ANALYSIS.md  README.md  SpreadAPI.re  bsconfig.json  built-with-reason-react.html  circle.yml  componentConstruction.re  crowdin.yaml  documentation.md  dune  dune-project  esy.json  example.re  examples.html  faq.html  flake.nix  gettingStarted.html  help-with-translations.html  index.html  migrateFrom02xTo024.js  migrationFrom015To020.js  oldScriptCarefulMigrateFrom015To020.js  package-lock.json  package.json  react-jsx-ppx.opam  reactjs-jsx-ppx.opam  reactjs_jsx_ppx_v3.install  (+10 more)
.circleci/: config.yml
.githooks/: pre-push
406.esy.lock/: index.json
GenerateComponentDependencies/: generateDottySvg.sh
ReactMini/: .gitignore  Makefile  README.md  bsconfig.json  package.json  printUtils.re  react.re  react.rei  test.exp.txt  test.re
apiIterations/: reactEffects.re
blog/: atom.xml  feed.xml  index.html
built-with-reason-react/: index.html
css/: main.css
demo/: dune  index.html  main.re
docs/: adding-data-props.md  blog.html  callback-handlers.html  callback-handlers.md  children.html  children.md  clone-element.html  clone-element.md  cloneElement.md  common-errors.md  community.html  community.md  component-as-prop.html  component-as-prop.md  component-creation.md  component-template.md  components.html  components.md  context-mixins.html  context-mixins.md  context.md  convert.md  counter.html  counter.md  creation-props-self.html  creation-props-self.md  custom-class-component-property.html  custom-class-component-property.md  custom-hooks.html  custom-hooks.md  dom.html  dom.md  element-type-is-invalid.html  element-type-is-invalid.md  error-boundaries.md  event.html  event.md  events.md  example-projects.html  example-projects.md  (+106 more)
en/: built-with-reason-react.html  examples.html  faq.html  gettingStarted.html  help-with-translations.html  index.html  users.html
en-UD/: built-with-reason-react.html  faq.html  gettingStarted.html  help-with-translations.html  index.html  users.html
es-ES/: built-with-bucklescript.html  built-with-reason-react.html  examples.html  faq.html  gettingStarted.html  help-with-translations.html  index.html
esy.lock/: index.json
explorations/: .gitignore  IDEAS.md  KEEPING_TYPES_SMALL.md  MIT-LICENSE  README.md  bench  dune  dune-project  package.json  package.json.personal
explorations/jsx/: dune  jbuild  ppx_react_compat.ml  reactjs_jsx_ppx.cppo.ml  reactjs_jsx_ppx_v3.reason_version  reactjs_jsx_ppx_v4.ml  reactjs_jsx_ppx_v4.ml-reverse-formatted  reactjs_jsx_ppx_v4.ml-reverse-formatted2  reactjs_jsx_ppx_v4.reason_version  reactjs_jsx_ppx_v4_reformatted.re
faq/: index.html
fr/: built-with-bucklescript.html  built-with-reason-react.html  examples.html  faq.html  gettingStarted.html  help-with-translations.html  index.html
jsx_ppx/: dune  reactjs_jsx_ppx_v3.cppo.ml  reactjs_jsx_ppx_v3.cppo.mli  reactjs_jsx_ppx_v3.ml  test.ml  test.re  test2.ml
jsx_ppx/artifacts/: test.ml  testout-402.ml  testout-406.ml  testout.ml
jsx_ppx/lib/: dune  reactjs_jsx_ppx_v3_lib.ml
jsx_ppx/test/: dune  pp.expected  pp.ml  test.ml
ppx/: dune  reason_react_ppx.ml  standalone.ml
ppx/src/: dune  ppx.ml  reactjs_jsx_ppx.ml
ppx/test/: dune  hover.t  input.re  input_locations.re  locations-check.t  optional-arg-check.t  output.expected  output_locations.expected  ppx.sh  ppx_with_refmt.sh  react.t  run-ppx.sh  standalone.ml
ppx/test/component-without-make.t/: input.re  run.t
ppx/test/component.t/: input.re  run.t
ppx/test/components-destructured-error.t/: component.re  run.t
ppx/test/constant-detection.t/: input.re  run.t
ppx/test/create-element.t/: input.re  run.t
ppx/test/external.t/: input.re  run.t
ppx/test/fragment.t/: input.re  run.t
ppx/test/functor.t/: input.re  run.t
ppx/test/issue-429.t/: run.t
ppx/test/key-as-prop-error.t/: component.re  run.t
ppx/test/keys.t/: component.re  run.t
ppx/test/location.t/: input.re  run.t
ppx/test/lower.t/: input.re  run.t
ppx/test/merlin/: dune
ppx/test/merlin/issue-429.t/: component.re  run.t
ppx/test/merlin/keys.t/: component.re  run.t
ppx/test/merlin/simple.t/: run.t
ppx/test/merlin/uppercase.t/: run.t
ppx/test/module-interface.t/: component.re  run.t
ppx/test/record-props-error.t/: input.re  run.t
ppx/test/record-props.t/: input.re  run.t
ppx/test/signature-optional.t/: input.re  run.t
ppx/test/signature.t/: input.re  run.t
ppx/test/simple.t/: component.re  run.t
ppx/test/upper.t/: input.re  run.t
ppx/test/uppercase.t/: component.re  run.t
src/: FormData.ml  README.md  React.re  React.rei  ReactDOM.re  ReactDOM.rei  ReactDOMRe.re  ReactDOMServer.re  ReactDOMServer.rei  ReactDOMServerNode.re  ReactDOMServerNode.rei  ReactDOMServerNodeOnly.re  ReactDOMServerRe.re  ReactDOMStyle.re  ReactDOMTestUtils.re  ReactDOMTestUtils.rei  ReactErrorBoundary.re  ReactErrorBoundary.rei  ReactEvent.re  ReactEvent.rei  ReactEventRe.re  ReactEventRe.rei  ReactHooks.re  ReactServerDOMWebpackClient.re  ReactTestRenderer.re  ReactTestRenderer.rei  ReactTestUtils.re  ReactTestUtils.rei  ReasonReact.re  ReasonReact.rei  ReasonReactCompat.re  ReasonReactCompat.rei  ReasonReactErrorBoundary.re  ReasonReactErrorBoundary.rei  ReasonReactOptimizedCreateClass.js  ReasonReactOptimizedCreateClass.re  ReasonReactRouter.re  ReasonReactRouter.rei  context.re  createClassInternalHack.re  (+20 more)
src/examples/counter/: Counter.re  index.html  webpack.config.js
src/examples/derived-state/: DerivedState.re  index.html  webpack.config.js
src/examples/did-catch/: DidCatch.re  index.html  webpack.config.js
src/examples/helloworld/: Helloworld.re  index.html  webpack.config.js
src/legacy/: ReactDOMRe.re  ReactDOMRe.rei  ReasonReact.re  ReasonReact.rei  ReasonReactCompat.rei
src/native_compat/: React.rei  dune
src/simple/: index.html  index.nobuild.html
src/test-utils/: dune  reactTest.re  reactTest.rei
(+1476 files in other folders)
