opam-version: "2.0"
synopsis: "reason-react"
homepage: "https://reasonml.github.io/reason-react/"
bug-reports: "https://github.com/reasonml/reason-react/issues"
depends: [
  "dune" {>= "2.7" & < "3"}
  "ocaml" {= "4.06.1"}
  "ocaml-lsp-server" {= "1.4.1"}
  "reason" {= "3.8.2"}
  "merlin" {= "3.4.0"}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
dev-repo: "git+https://github.com/reasonml/reason-react.git"
