(library
 (name reason_react_ppx)
 (modules reason_react_ppx)
 (public_name reason-react-ppx)
 (flags :standard -w -9)
 (kind ppx_rewriter)
 (preprocess
  (pps ppxlib.metaquot))
 (libraries ppxlib))

(executable
 (name standalone)
 (modules standalone)
 (package reason-react-ppx)
 (public_name reason-react-ppx)
 (libraries reason-react-ppx ppxlib))
