(library
 (name react)
 (public_name reason-react)
 (wrapped false)
 ; Explicitly adding modules isn't necessary, but it's a good idea
 ; when wrapped is false, so we don't export something by accident
 (modules
  React
  ReactDOM
  ReactTestRenderer
  ReasonReactRouter
  ReasonReactErrorBoundary)
 (preprocess
  (pps melange.ppx reason-react-ppx))
 (libraries melange.dom)
 (modes melange))
