(library
 (name react)
 (public_name reason-react)
 (wrapped false)
 ; Explicitly adding modules isn't necessary, but it's a good idea
 ; when wrapped is false, so we don't export something by accident
 (modules
  React
  ReactDOM
  ReactDOMServer
  ReactDOMTestUtils
  ReactTestRenderer
  ReasonReactRouter
  FormData
  ReasonReactErrorBoundary)
 (preprocess
  (pps melange.ppx reason-react-ppx))
 (libraries melange.dom melange.js)
 (modes melange))

(library
 (name ReactDOMServerNode)
 (public_name reason-react.node)
 (modules ReactDOMServerNode)
 (libraries react)
 (preprocess
  (pps melange.ppx))
 (modes melange))
