(library
 (name reactjs_jsx_ppx_v4)
 (public_name static-react.reactjs_jsx_ppx_v4)
 (kind ppx_rewriter)
 (modules reactjs_jsx_ppx_v4)
 (libraries reason ocaml-migrate-parsetree))

;; compatibility for those that use -ppx manually
(executable
 (name ppx_react_compat)
 (public_name ppx_react.exe)
 (modules ppx_react_compat)
 (package static-react)
 (libraries reason ocaml-migrate-parsetree reactjs_jsx_ppx_v4))
